fix alignment, add empty state when search not found

--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -3,6 +3,17 @@
 .main {
   background-color: $wes-asphalt;
   min-height: 100vh;
+}
+
+.flex-all-center {
+  height: 100vh;
+  width: 100vw;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.consumer-alert__main {
   display: flex;
   flex-direction: column;
   align-items: center;
