--- a/src/components/EmptyState/EmptyState.scss
+++ b/src/components/EmptyState/EmptyState.scss
@@ -14,6 +14,7 @@
   }
 
   &__msg {
+    color: $gray-200;
     margin-bottom: 0;
   }
 
